Логика закончена, приложение запускается, однако: 1: окно открывается в слишком большом размере, скорее всего из-за SlotView. 2: компания начала использовать не-PNG форматы для шаблонов, так что нужно добавить обработку TIFF, ESP, и сделать одним из них(либо PDF) 3: улучшить визуал 4: укомплектовать в .exe файл однако я уже прошел большую часть разработки, ведь все проблемы были связанны с совместимостью